src/objects/Employees__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>FLOOR((TODAY() - Birthdate__c)/365.2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Birthday_Day__c</fullName>
        <formula>If(Day(Birthdate__c)=Day(Today()),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birthday Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birthday_Month__c</fullName>
        <formula>If(Month(Birthdate__c)=Month(Today()),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birthday Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Branch_Manager_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Branch Manager Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Certifications__c</fullName>
        <label>Certifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Children__c</fullName>
        <label>Children</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Davenport_Assistant_Username__c</fullName>
        <label>Davenport Assistant Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Davenport_Username__c</fullName>
        <label>Davenport Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_ID__c</fullName>
        <label>Department ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Director</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <externalId>true</externalId>
        <label>Employee ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Former_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Former Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Groups__c</fullName>
        <label>Groups</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hire_Day__c</fullName>
        <formula>If(Day(Hire_Date__c)=Day(Today()),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hire Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Home_Email__c</fullName>
        <label>Home Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ImportID__c</fullName>
        <label>ImportID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Legacy_Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Owner_ID__c</fullName>
        <label>Legacy Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Date__c</fullName>
        <label>License Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Licenses__c</fullName>
        <label>Licenses</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Primary_Rep_Name__c</fullName>
        <label>Primary Rep Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Rep_Number__c</fullName>
        <formula>Primary_Rep__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Rep Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Rep</label>
        <referenceTo>Rep__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Producer_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Producer Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Spouse__c</fullName>
        <label>Spouse</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Licensed__c</fullName>
        <label>State Licensed</label>
        <length>350</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NY</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>VT</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>OH</fullName>
                </value>
                <value>
                    <fullName>TN</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
                <value>
                    <fullName>WI</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terminated__c</fullName>
        <label>Terminated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Years_with_Firm__c</fullName>
        <formula>FLOOR((TODAY() - Hire_Date__c)/365)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Years with Firm</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>